--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAIZ</title>
+    <title>FAIZ Back to 90's</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
@@ -21,18 +21,17 @@
     </style>
   
 </head>
-<body>
+
     <!-- home -->
    
   </head>
-  <body>
+  <body id="home">
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="padding: 20px; border-bottom: 3px solid #ccc; margin-bottom: 60px; background-color: whitesmoke;">
       <div class="container">
         <h2 style="margin-bottom: 0;">
           <i class="snes-jp-logo"></i>
           FAIZ
         </h2>
-        
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,27 +39,26 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item navigasi">
-                      <section class="topic"><h6 id="about"><a class="nav-link" href="#home">
-                        <span class="nes-text is-primary">#HOME</span></a></h6></section>
+                      <section class="topic"><h6 id=""><a class="nav-link" href="#home">
+                        <span class="nes-text is-primary">#Home</span></a></h6></section>
                     </li>
                     <li class="nav-item navigasi">
-                      <section class="topic"><h6 id="about"><a class="nav-link" href="#about">
+                      <section class="topic"><h6 id=""><a class="nav-link" href="#home">
                         <span class="nes-text is-success">#AboutMe</span></a></h6></section>
                     </li>
                     <li class="nav-item navigasi">
-                      <section class="topic"><h6 id="about"><a class="nav-link" href="#porto">
+                      <section class="topic"><h6 id=""><a class="nav-link" href="#project">
                         <span class="nes-text is-warning">#Portofolio</span></a></h6></section>
                     </li>
                     <li class="nav-item navigasi">
-                      <section class="topic"><h6 id="about"><a class="nav-link" href="#contact">
+                      <section class="topic"><h6 id=""><a class="nav-link" href="#blog">
                         <span class="nes-text is-error">#Contact</span></a></h6></section>
                     </li>
                 </ul>
             </div>
       </div>
     </nav>
-  
-    <div class="container" style="margin-top: 150px;">
+    <div id="home" class="container" style="margin-top: 150px;">
       <div class="row">
         <div class="col">
           <!-- masih bingung di isi apa -->
@@ -73,15 +71,15 @@
         </div>
       </div>
     </div>
-
-    <div class="container">
+    <!-- isi body -->
+    <div class="container"> 
       <div class="row">
         <!-- left -->
       
         <div class="col-md-4 col-sm-12 col-xs-12">
           <div>
             <section class="nes-container with-title"><h3 class="title">It's me</h3> 
-          <div id="containers" class="item">
+          <div class="item">
             <div class="nes-container with-title is-centered">
               <img src="img/profile-img-mobile.jpg" style="height: 200px; width: 170px;">
             </div>
@@ -203,7 +201,7 @@
               </div>
             </div>
   
-            <div class="row">
+            <div id="project" class="row">
               <div class="col-sm-10 col-xs-12">Jawa Pos Radar Malang</div>
               <div class="col-sm-2 col-xs-12">
                 <progress class="nes-progress is-warning" value="95" max="100">
@@ -214,7 +212,7 @@
            <!-- intern -->
 
           <div class="nes-container with-title" style="margin-top: 40px; margin-bottom: 40px">  
-            <h3 class="title">Project</h3>         
+          <h3 class="title">Project</h3>         
           <div class="nes-table-responsive">
             <table class="nes-table is-bordered is-dark">
               <thead>
@@ -236,8 +234,46 @@
            <!-- Portofolio -->
       </div>
     </div>
+
+  </div> <!-- end isi body -->
+
+  <!-- artikel -->
+  <div class="container col-md-12 col-sm-12 col-xs-12">
+    <section class="topic"><h2 id="blog"><a href="#blog">#</a>Blog</h2> 
+      <p>
+        Besides coding, I also really like to write and share many things on my blog, I love to tell stories. Maybe so as not to go senile. If you want to read, I'll give you this link:
+        <a href="https://kiritonagi.blogspot.com/">kiritonagi</a>
+      </p></section>
+  </div>
+  <div class="container col-md-12 col-sm-12 col-xs-12">
+
+    <section class="topic"><h2 id="contact"><a href="#blog">#</a>Contact Me</h2> 
+      <p> 
+        If you need anything or want to contact me, please contact this email faiz.syahrullah@gmail.com
+      </p></section>
+  </div>
+
+  <!-- pokemon -->
+  <div class="container col-md-12 col-sm-12 col-xs-12" style="margin-top: 50px;>
+  <section class="showcase"><section class="nes-container with-title"><h3 class="title">Nintendo-characters</h3> <div id="Nintendo-characters" class="item"><section class="icon-list">
+    <!-- Copyright Nintendo -->
+    <i class="nes-mario"></i>
+    <i class="nes-ash"></i>
+    <i class="nes-pokeball"></i>
+    <i class="nes-bulbasaur"></i>
+    <i class="nes-charmander"></i>
+    <i class="nes-squirtle"></i>
+    <i class="nes-kirby"></i>
+    <i class="nes-octocat animate"></i>
+  </section></div> <!----> 
+  <p class="note nes-text is-error">
+    It's so adorable not to show it, thanks to NES and Nintendo as copyright owners. The characters you bring back to our 90' are very nostalgic and colorful. 
+  </p> 
+  <a href="#home"><button type="button" class="nes-btn is-warning showcode">Back to Top</button></a></div>
+  <!-- artikel -->
+  
       <!-- footer -->
-    <section class="footer">
+    <section class="footer" style="margin-top: 50px;">
       <div class="container-lg">
           <div class="row">
               <div class="col-lg-12">
@@ -246,7 +282,8 @@
           </div>
       </div>
   </section>
-  
-  <script src=" ./js/bootstrap.min.js"></script>
+
+
+   <script src=" ./js/bootstrap.min.js"></script>
 </body>
 </html>
