--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   </div>
 
   <!-- pokemon -->
-  <div class="container col-md-12 col-sm-12 col-xs-12" style="margin-top: 50px;>
+  <div class="container col-md-12 col-sm-12 col-xs-12" style="margin-top: 50px;">
   <section class="showcase"><section class="nes-container with-title"><h3 class="title">Nintendo-characters</h3> <div id="Nintendo-characters" class="item"><section class="icon-list">
     <!-- Copyright Nintendo -->
     <i class="nes-mario"></i>
