Update Style Minor

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAIZ Back to 90's</title>
+    <link rel="shortcut icon" href="./img/fav-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
@@ -66,7 +67,13 @@
         <div class="col-sm-10 col-xs-12">
           <div class="nes-balloon from-left">
             <p style="color: #ff0000"><span>Hi Im on the role of front end web developer</span></p>
-            <p>Support me!!!</p>
+            <p>Support me
+              <!-- heart -->
+              <i class="nes-icon is-small heart"></i>
+              <i class="nes-icon is-small is-half heart"></i>
+              <i class="nes-icon is-small is-transparent heart"></i>
+              <i class="nes-icon is-small heart is-empty"></i> !!!!
+            </p>
           </div>
         </div>
       </div>
@@ -80,8 +87,8 @@
           <div>
             <section class="nes-container with-title"><h3 class="title">It's me</h3> 
           <div class="item">
-            <div class="nes-container with-title is-centered">
-              <img src="img/profile-img-mobile.jpg" style="height: 200px; width: 170px;">
+            <div class="nes-container is-rounded with-title is-centered">
+              <img src="img/img-profile.jpg_small" style="height: 200px; width: 220px;" class="nes-avatar is-large">
             </div>
           </div> <!---->
         </section>
@@ -242,14 +249,14 @@
     <section class="topic"><h2 id="blog"><a href="#blog">#</a>Blog</h2> 
       <p>
         Besides coding, I also really like to write and share many things on my blog, I love to tell stories. Maybe so as not to go senile. If you want to read, I'll give you this link:
-        <a href="https://kiritonagi.blogspot.com/">kiritonagi</a>
+        <a href="https://kiritonagi.blogspot.com/" class="nes-text is-success">kiritonagi</a>
       </p></section>
   </div>
   <div class="container col-md-12 col-sm-12 col-xs-12">
 
     <section class="topic"><h2 id="contact"><a href="#blog">#</a>Contact Me</h2> 
       <p> 
-        If you need anything or want to contact me, please contact this email faiz.syahrullah@gmail.com
+        If you need anything or want to contact me, please contact this email <span class="nes-text is-warning">faiz.syahrullah@gmail.com</span>
       </p></section>
   </div>
 
