--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item navigasi">
-                      <section class="topic"><h6 id=""><a class="nav-link" href="#home">
+                      <section class="topic"><h6 id=""><a class="nav-link" href="" onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">
                         <span class="nes-text is-primary">#Home</span></a></h6></section>
                     </li>
                     <li class="nav-item navigasi">
@@ -87,8 +87,8 @@
           <div>
             <section class="nes-container with-title"><h3 class="title">It's me</h3> 
           <div class="item">
-            <div class="nes-container is-rounded with-title is-centered">
-              <img src="img/img-profile.jpg_small" style="height: 200px; width: 220px;" class="nes-avatar is-large">
+            <div class="nes-container is-rounded with-title is-centered p-0 m-0">
+              <img src="img/img-profile.jpg_small" class="nes-avatar is-large w-100 h-auto">
             </div>
           </div> <!---->
         </section>
@@ -105,7 +105,7 @@
           </div>
           <div class="nes-container with-title" style="margin-top: 50px; margin-bottom: 50px; text-align: center;">
             <div class="title">social media</div>
-            <div>
+            <div class="d-flex justify-content-around">
               <a href="https://twitter.com/kiritonagi_">
                 <i class="nes-icon twitter"></i>
               </a>
@@ -276,7 +276,7 @@
   <p class="note nes-text is-error">
     It's so adorable not to show it, thanks to NES and Nintendo as copyright owners. The characters you bring back to our 90' are very nostalgic and colorful. 
   </p> 
-  <a href="#home"><button type="button" class="nes-btn is-warning showcode">Back to Top</button></a></div>
+  <button type="button" class="nes-btn is-warning showcode" onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">Back to Top</button></div>
   <!-- artikel -->
   
       <!-- footer -->
