--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>FAIZ Back to 90's</title>
     <link rel="shortcut icon" href="./img/fav-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
 
@@ -239,6 +238,40 @@
         </div>
 
            <!-- Portofolio -->
+
+           <!-- start projek -->
+          <div class="nes-container is-rounded with-title" style="margin-top: 40px; margin-bottom: 40px">  
+            <h3 class="title">Some Online Portofolio</h3>
+           <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/card-dark.png" class="d-block w-100 h-100px" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/card-light.png" class="d-block w-100 h-100px" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+          <div class="nes-container with-title is-centered is-dark" style="margin: 20px 0px 20px 0px;">
+            <p class="title">#Portofolio Card</p>
+            <p>visit the page directly <a href="https://bersekerblade.github.io/Portofolio-Card/" class="nes-text">klik here!</a></p>
+          </div>
+        </div>
+
+          <!-- end projek -->
       </div>
     </div>
 
