--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
           <div class="nes-container with-title is-centered is-dark" style="margin: 20px 0px 20px 0px;">
             <p class="title">#Portofolio Card</p>
-            <p>visit the page directly <a href="https://bersekerblade.github.io/Portofolio-Card/" class="nes-text">klik here!</a></p>
+            <p>visit the page directly <a href="https://bersekerblade.github.io/Portofolio-Card/" class="nes-text">click here!</a></p>
           </div>
         </div>
 
