--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -253,6 +255,12 @@
               </div>
               <div class="carousel-item">
                 <img src="img/card-light.png" class="d-block w-100 h-100px" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/mini-sinau.jfif" class="d-block w-100 h-100px" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/pokedex.png" class="d-block w-100 h-100px" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -265,9 +273,11 @@
             </button>
           </div>
 
-          <div class="nes-container with-title is-centered is-dark" style="margin: 20px 0px 20px 0px;">
-            <p class="title">#Portofolio Card</p>
-            <p>visit the page directly <a href="https://bersekerblade.github.io/Portofolio-Card/" class="nes-text">click here!</a></p>
+          <div class="lists nes-container is-rounded is-dark" style="margin-top: 20px;">
+            <ul class="nes-list is-circle is-dark">
+              <li><a href="https://bersekerblade.github.io/Portofolio-Card/" class="nes-text">Portofolio Card</a></li>
+              <li><a href="https://bersekerblade.github.io/pokedex/" class="nes-text is-warning">Pokemon data books/Pokedex</a></li>
+            </ul>
           </div>
         </div>
 
