--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
               <i class="nes-icon is-small star"></i>
             </div>
           </div>
+
+          <div class="nes-container with-title is-rounded is-dark" style="margin-top: 50px; margin-bottom: 50px;">
+            <h3 class="title">Bootcamp Certificate</h3>
+            <div class="nes-container is-rounded with-title is-centered p-0 m-0">
+              <img src="img/sertifikat.png" class="nes-avatar is-large w-100 h-auto">
+            </div>
+          </div>
+
           <div class="nes-container with-title" style="margin-top: 50px; margin-bottom: 50px; text-align: center;">
             <div class="title">social media</div>
             <div class="d-flex justify-content-around">
@@ -167,9 +175,25 @@
             </div>
 
             <div class="row">
-              <div class="col-sm-4 col-xs-12">ReactJs</div>
+              <div class="col-sm-4 col-xs-12">VueJs</div>
               <div class="col-sm-8 col-xs-12">
-                <progress class="nes-progress is-success" value="10"max="100">
+                <progress class="nes-progress is-success" value="30"max="100">
+                </progress>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4 col-xs-12">CI3</div>
+              <div class="col-sm-8 col-xs-12">
+                <progress class="nes-progress is-success" value="30"max="100">
+                </progress>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4 col-xs-12">PHP</div>
+              <div class="col-sm-8 col-xs-12">
+                <progress class="nes-progress is-success" value="30"max="100">
                 </progress>
               </div>
             </div>
@@ -177,6 +201,26 @@
           </div>
   
           <!-- work -->
+          <div class="nes-container with-title" style="margin-top: 40px;">
+            <h3 class="title">Current Work</h3>
+  
+            <div class="row">
+              <div class="col-sm-8 col-xs-12"><p class="nes-text is-primary">PT. Sinohydro (Kereta Cepat Indonesia China/KCIC)</p></div>
+              <div class="col-sm-4 col-xs-12">
+                <progress class="nes-progress is-warning" value="95" max="100">
+                </progress>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-8 col-xs-12">Sannin Studio (Remote Front End Web)</div>
+              <div class="col-sm-4 col-xs-12">
+                <progress class="nes-progress is-warning" value="95" max="100">
+                </progress>
+              </div>
+            </div>
+          </div>
+
           <div class="nes-container with-title is-dark" style="margin-top: 40px;">
             <h3 class="title">Work Experience</h3>
             <div class="row">
