--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
               <li>Vue JS III</li>
               <li>Wordpress</li>
               <li>Python</li>
-              <li>HTML</li>
-              <li>CSS</li>
+              <li>Dart</li>
               <li>Git</li>
             </ul>
           </div>
@@ -183,7 +182,7 @@
     <section class="topic">
       <h2 id="blog"><a href="#blog">#</a>Blog</h2>
       <p>
-        Besides coding, I also really like to write and share many things on my blog, I love to tell stories. Maybe so as not to go senile. If you want to read, I'll give you this link:
+        I write here
         <a href="https://kiritonagi.blogspot.com/" class="nes-text is-success">www.kiritonagi.blogspot.com</a>
       </p>
     </section>
