--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
           <h3 id="project" class="title">Experience</h3>
 
           <ul class="nes-list is-disc">
+            <li>Founder Humming Bird (2023 - Now)</li>
             <li>Sannin Studio</li>
             <li>PT. Sinohydro Co.Ltd</li>
             <li>PT Smoore Technology Indonesia</li>
