--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
           <h3 id="project" class="title">Experience</h3>
 
           <ul class="nes-list is-disc">
-            <li>Founder Humming Bird (2023 - Now)</li>
-            <li>Sannin Studio</li>
+            <li>Humming Bird (2023 - Now)</li>
+            <li>Sannin Studio (2022 - Now)</li>
             <li>PT. Sinohydro Co.Ltd</li>
             <li>PT Smoore Technology Indonesia</li>
             <li>PT Blue Ocean Heart</li>
