update support menu

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="col-sm-10 col-xs-12">
         <div class="nes-balloon from-left">
           <p style="color: #EF97C7"><span>I learn by heart, wherever lifes take me.</span></p>
-          <p style="color: #DD8CC6">Support me 
+          <p style="color: #DD8CC6">Support me <a href="https://trakteer.id/kiritonagi/tip" class="nes-text is-error">trakteer.id</a>
             <!-- heart -->
             <i class="nes-icon is-small heart"></i>
             <i class="nes-icon is-small is-half heart"></i>
