--- a/index.html
+++ b/index.html
@@ -129,9 +129,10 @@
           <h3 class="title">Skill</h3>
           <div class="lists">
             <ul class="nes-list is-disc">
-              <li>PHP (Code Igniter III)</li>
+              <li>Laravel</li>
+              <li>CodeIgniter</li>
               <li>Javascript</li>
-              <li>Vue JS III</li>
+              <li>Vue JS</li>
               <li>Wordpress</li>
               <li>Python</li>
               <li>Dart</li>
@@ -171,6 +172,7 @@
       <h2><a href="#project">#</a>Portofolio</h2>
 
       <ul class="nes-list is-disc">
+        <li><a href="https://www.gantanganprasasti.id/">Gantanga Prasasti</a></li>
         <li><a href="https://sanninstudio.com/">Sannin Studio</a></li>
         <li><a href="https://bersekerblade.github.io/Portofolio-Card/">Portofolio Card</a></li>
         <li><a href="https://bersekerblade.github.io/pokedex/">Pokemon data books/Pokedex</a></li>
