--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FAIZ Back to 90's</title>
+  <title>Kiritonagi Back to 90's</title>
   <link rel="shortcut icon" href="./img/fav-icon.png" type="image/x-icon">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
@@ -31,8 +31,8 @@
   <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="padding: 20px; border-bottom: 3px solid #ccc; margin-bottom: 60px; background-color: whitesmoke;">
     <div class="container">
       <h2 style="margin-bottom: 0;">
-        <i class="snes-jp-logo"></i>
-        FAIZ
+        <i class="nes-jp-logo"></i>
+        <img class="is-small w-50 h-30" alt="Gravatar image example" src="img/logo-kirito.png" style="image-rendering: pixelated;">
       </h2>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -42,25 +42,25 @@
           <li class="nav-item navigasi">
             <section class="topic">
               <h6 id=""><a class="nav-link" href="" onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">
-                  <span class="nes-text" style="color: #715BA4">#Home</span></a></h6>
+                  <span class="nes-text" style="color: #0474BA">#Home</span></a></h6>
             </section>
           </li>
           <li class="nav-item navigasi">
             <section class="topic">
               <h6 id=""><a class="nav-link" href="#home">
-                  <span class="nes-text" style="color: #CB85C3">#AboutMe</span></a></h6>
+                  <span class="nes-text" style="color:#00A7E1">#AboutMe</span></a></h6>
             </section>
           </li>
           <li class="nav-item navigasi">
             <section class="topic">
               <h6 id=""><a class="nav-link" href="#project">
-                  <span class="nes-text" style="color: #F5B8C1">#Portofolio</span></a></h6>
+                  <span class="nes-text" style="color:	#FFA630">#Portofolio</span></a></h6>
             </section>
           </li>
           <li class="nav-item navigasi">
             <section class="topic">
               <h6 id=""><a class="nav-link" href="#blog">
-                  <span class="nes-text" style="color: #FFC8C3">#Contact</span></a></h6>
+                  <span class="nes-text" style="color:#F17720">#Contact</span></a></h6>
             </section>
           </li>
         </ul>
@@ -74,8 +74,8 @@
       </div>
       <div class="col-sm-10 col-xs-12">
         <div class="nes-balloon from-left">
-          <p style="color: #EF97C7"><span>I learn by heart, wherever lifes take me.</span></p>
-          <p style="color: #DD8CC6">Support me <a href="https://trakteer.id/kiritonagi/tip" class="nes-text is-error">trakteer.id</a>
+          <p style="color: #957DAD"><span>I’m into Web3 now and also a lifelong Mandarin learner. . .</span></p>
+          <p style="color: #86007D">You can download HSK vocab <a href="https://trakteer.id/kiritonagi/showcase" class="nes-text" style="color: #ef0e46">here</a> if you need it.</a>
             <!-- heart -->
             <i class="nes-icon is-small heart"></i>
             <i class="nes-icon is-small is-half heart"></i>
@@ -126,7 +126,7 @@
       <!-- right      -->
       <div class="col-md-8 col-sm-12 col-xs-12">
         <div class="nes-container is-rounded with-title">
-          <h3 class="title">Skill</h3>
+          <h3 class="title">It was my skill, but I forgot.</h3>
           <div class="lists">
             <ul class="nes-list is-disc">
               <li>Laravel</li>
@@ -148,8 +148,8 @@
           <h3 id="project" class="title">Experience</h3>
 
           <ul class="nes-list is-disc">
-            <li>Humming Bird (2023 - Now)</li>
-            <li>Sannin Studio (2022 - Now)</li>
+            <li>Humming Bird</li>
+            <li>Sannin Studio</li>
             <li>PT. Sinohydro Co.Ltd</li>
             <li>PT Smoore Technology Indonesia</li>
             <li>PT Blue Ocean Heart</li>
@@ -172,8 +172,8 @@
       <h2><a href="#project">#</a>Portofolio</h2>
 
       <ul class="nes-list is-disc">
-        <li><a href="https://www.gantanganprasasti.id/">Gantanga Prasasti</a></li>
         <li><a href="https://sanninstudio.com/">Sannin Studio</a></li>
+        <li><a href="https://www.gantanganprasasti.id/">Gantanga Prasasti</a></li>
         <li><a href="https://bersekerblade.github.io/Portofolio-Card/">Portofolio Card</a></li>
         <li><a href="https://bersekerblade.github.io/pokedex/">Pokemon data books/Pokedex</a></li>
         <li><a href="https://amtacommodityindonesia.com/">Amta </a></li>
@@ -190,6 +190,7 @@
       </p>
     </section>
   </div>
+  
   <div class="container col-md-12 col-sm-12 col-xs-12">
 
     <section class="topic">
@@ -209,7 +210,7 @@
     <div class="container-lg">
       <div class="row">
         <div class="col-lg-12">
-          <p class="text-center text-muted m-0">&copy; 1995. Faiz</p>
+          <p class="text-center text-muted m-0">&copy; 1995. Kiritonagi</p>
         </div>
       </div>
     </div>
